--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,149 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: #fbfbfb;
+}
+
+.wrapper {
+  width: 500px;
+  margin: 10px auto;
+  font-size: 14px;
+  background-color: #fff;
+  border: 1px solid #f1f1f1;
+  padding: 20px;
+}
+
+/* 评论框样式 */
+.note-editor {
+  margin-bottom: 30px;
+}
+
+.note-editor__input {
+  background-color: #fff;
+  border: 1px solid #f1f1f1;
+  padding: 20px;
+  margin-bottom: 10px;
+  display: none;
+}
+
+.note-editor__input.show {
+    display: block;
+}
+
+.note-field {
+  margin-bottom: 15px;
+  display: flex;
+}
+
+.note-field .note-field__label {
+  display: flex;
+  flex-basis: 100px;
+  font-size: 14px;
+}
+
+.note-field .note-field__input {
+  display: flex;
+  flex: 1;
+}
+
+.note-field__input input,
+.note-field__input textarea {
+  border: 1px solid #e6e6e6;
+  border-radius: 3px;
+  padding: 5px;
+  outline: none;
+  font-size: 14px;
+  resize: none;
+  flex: 1;
+}
+
+.note-field__input textarea {
+  height: 100px;
+}
+
+.note-editor--add,
+.note-editor--save {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.note-editor--add {
+  margin-bottom: 15px;
+}
+
+.note-editor--add button,
+.note-editor--save button {
+  padding: 5px 10px;
+  width: 80px;
+  border: none;
+  border-radius: 3px;
+  background-color: #00a3cf;
+  color: #fff;
+  outline: none;
+  cursor: pointer;
+}
+
+.note-field__button button:active {
+  background: #13c1f1;
+}
+
+/* 评论列表样式 */
+.note-list {
+  background-color: #fff;
+  border: 1px solid #f1f1f1;
+  padding: 20px;
+}
+
+/* 评论组件样式 */
+.note {
+  position: relative;
+  display: flex;
+  border-bottom: 1px solid #f1f1f1;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  min-height: 50px;
+}
+
+.note .note-user {
+  flex-shrink: 0;
+}
+
+.note-username {
+  color: #00a3cf;
+  font-style: italic;
+}
+
+.note-createdtime {
+  padding-right: 5px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 5px;
+  font-size: 12px;
+}
+
+.note-delete,
+.note-update {
+  position: absolute;
+  right: 0;
+  top: 0;
+  color: red;
+  font-size: 12px;
+  cursor: pointer;
+}
+
+.note-update {
+  right: 30px;
+  color: #00a3cf;
+}
+
+.note p {
+  margin: 0;
+  /*text-indent: 2em;*/
+}
+
+code {
+  border: 1px solid #ccc;
+  background: #f9f9f9;
+  padding: 0px 2px;
 }
